Hacky-hardcoded lein step and basic test